Digital/objects/DGTL_Task__c.object
<CustomObject>
    <label>Digital Task</label>
    <nameField>
        <displayFormat>TSK-{0000000000}</displayFormat>
        <label>Digital Task No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Task</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AB_Test_Name__c</fullName>
        <label>AB Test Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Path__c</fullName>
        <label>Asset Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Autoplay_Video__c</fullName>
        <label>Autoplay Video?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Takedown_Asset_ID__c</fullName>
        <formula>KOD__r.Auto_Takedown_Asset_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Takedown Asset ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Takedown_Quantity__c</fullName>
        <formula>KOD__r.Auto_Takedown_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Takedown Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Placement_Content__r.Brand__c</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Panties</fullName>
                </value>
                <value>
                    <fullName>Swim</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Home page</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Bras</fullName>
                </value>
                <value>
                    <fullName>Lingerie</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Lounge</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Tops</fullName>
                </value>
                <value>
                    <fullName>Bottoms</fullName>
                </value>
                <value>
                    <fullName>GRL PWR</fullName>
                </value>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Bags-and-Accessories</fullName>
                </value>
                <value>
                    <fullName>PINK Beauty</fullName>
                </value>
                <value>
                    <fullName>Trending</fullName>
                </value>
                <value>
                    <fullName>Bra</fullName>
                    <isActive>false</isActive>
                    <label>Bra</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Changed_Content_Fields__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collection_Page_URL__c</fullName>
        <label>Collection Page URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Detail_Information__c</fullName>
        <label>Content Detail Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Color__c</fullName>
        <label>Copy Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Image__c</fullName>
        <label>Copy (Image)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Copy_Video__c</fullName>
        <label>Copy (Video)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Copy__c</fullName>
        <label>Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTA__c</fullName>
        <label>CTA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Placement_Content__r.Placement_Layout__r.Floorset_Plan__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decorative_Video__c</fullName>
        <label>Decorative Video?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependency_Comments__c</fullName>
        <label>Dependency Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Depends_On__c</fullName>
        <label>Depends On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchandiser</fullName>
                </value>
                <value>
                    <fullName>Copy Writer</fullName>
                </value>
                <value>
                    <fullName>Creative Design</fullName>
                </value>
                <value>
                    <fullName>Digital Producers</fullName>
                </value>
                <value>
                    <fullName>Commerce Operations</fullName>
                </value>
                <value>
                    <fullName>Creative Operations</fullName>
                </value>
                <value>
                    <fullName>Bangalore Commerce Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desktop__c</fullName>
        <label>Desktop</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Details_Link__c</fullName>
        <label>Details Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DGTL_TaskOwner__c</fullName>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DGTL_Merchandiser</fullName>
                    <label>Merchandiser</label>
                </value>
                <value>
                    <fullName>DGTL_Copy_Writer</fullName>
                    <label>Copy Writers</label>
                </value>
                <value>
                    <fullName>DGTL_Creative_Design</fullName>
                    <label>Creative Design</label>
                </value>
                <value>
                    <fullName>DGTL_Digital_Producers</fullName>
                    <label>Digital Producers</label>
                </value>
                <value>
                    <fullName>DGTL_Commerce_Operations</fullName>
                    <label>Commerce Operations</label>
                </value>
                <value>
                    <fullName>DGTL_Bangalore_Commerce_Services</fullName>
                    <label>Bangalore Commerce Services</label>
                </value>
                <value>
                    <fullName>DGTL_Offer_Management</fullName>
                    <label>Offer Management</label>
                </value>
                <value>
                    <fullName>DGTL_Creative_Operations</fullName>
                    <isActive>false</isActive>
                    <label>Creative Operations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Offer_Disclaimer__c</fullName>
        <label>Digital Offer Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Editorial_Placement_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Editorial Placement Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>Digital Task</relationshipLabel>
        <relationshipName>Digital_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floorset_Name__c</fullName>
        <formula>Placement_Content__r.Placement_Layout__r.Floorset_Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floorset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floorset_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Floorset/Update</label>
        <referenceTo>DGTL_Floorset_Plan__c</referenceTo>
        <relationshipLabel>Digital Task</relationshipLabel>
        <relationshipName>Digital_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grouped__c</fullName>
        <label>Grouped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headline_color__c</fullName>
        <label>Headline color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImagePath__c</fullName>
        <label>ImagePath</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_Map_Path_Video__c</fullName>
        <label>Image Map Path (Video)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image_Map_Path__c</fullName>
        <label>Image Map Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KOD_Offer_Type__c</fullName>
        <formula>TEXT(KOD__r.Offer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KOD Offer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KOD</label>
        <referenceTo>KOD__c</referenceTo>
        <relationshipLabel>Digital Task</relationshipLabel>
        <relationshipName>Digital_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Layer_Image_Path__c</fullName>
        <label>Layer Image Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Layout_Type__c</fullName>
        <label>Layout Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linking__c</fullName>
        <label>Linking</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_Text__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Looping_Video__c</fullName>
        <label>Looping Video?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Message__c</fullName>
        <label>Main Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placement Content</fullName>
                </value>
                <value>
                    <fullName>Placement Content Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <formula>KOD__r.Offer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer/Non-offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <formula>TEXT(Placement_Content__r.Placement_Layout__r.Page_Types__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Digital Task (Parent Content)</relationshipLabel>
        <relationshipName>Digital_Task_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Task</label>
        <referenceTo>DGTL_Task__c</referenceTo>
        <relationshipLabel>Digital Task</relationshipLabel>
        <relationshipName>Digital_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipName>Task_Digital</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Layout__c</fullName>
        <formula>Placement_Content__r.Placement_Layout__r.Name</formula>
        <label>Placement Layout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_type__c</fullName>
        <label>Placement type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Type__c</fullName>
        <formula>TEXT(KOD__r.Promo_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Row Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Placements__c</fullName>
        <label>Site Placements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <formula>Placement_Content__r.S_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Detail__c</fullName>
        <formula>IF( AND( ISBLANK( Parent_Task__c ),  NOT( ISPICKVAL( Placement_Content__r.Type__c , &#39;Controlled&#39;) )  ),   IF( ISPICKVAL( Placement_Content__r.Type__c , &#39;Contingency&#39;) , &#39;Contingency for &#39;+ Placement_Content__r.Main_Message__c , &#39;AB Test for &#39;+ Placement_Content__r.Main_Message__c) , Placement_Content__r.Main_Message__c)</formula>
        <label>Task Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Textbox_Background_Color__c</fullName>
        <label>Textbox Background Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Textbox_Width__c</fullName>
        <label>Textbox Width</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Box_Opacity__c</fullName>
        <label>Text Box Opacity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Image_Path__c</fullName>
        <label>Title Image Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_File_Path__c</fullName>
        <label>Video File Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_longer_than_30_secs__c</fullName>
        <label>Video longer than 30 secs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Day_View</fullName>
        <active>true</active>
        <label>Day View</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalation</fullName>
        <active>true</active>
        <label>Escalation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notification</fullName>
        <active>true</active>
        <label>Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>OnChange</fullName>
        <active>true</active>
        <label>OnChange</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Task</fullName>
        <active>true</active>
        <label>User Task</label>
    </recordTypes>
    <listViews>
        <fullName>Bangalore_Tasks1</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Page_Name__c</columns>
        <columns>Floorset_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.User_Task</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>VS</value>
        </filters>
        <filters>
            <field>Page_Name__c</field>
            <operation>equals</operation>
            <value>Home Page</value>
        </filters>
        <label>Bangalore Tasks</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Commerce_Operations</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Commerce_Operations</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>Beauty - Commerce Operations</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Copy_Writer</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Copy_Writer</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>Beauty - Copy Writer</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Creative_Design</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Creative_Design</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>Beauty - Creative Design</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Daily_Updates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Day_View</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <label>Beauty Daily Updates</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Escalation_Group</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Escalation</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Rejected</value>
        </filters>
        <label>Beauty - Escalation Group</label>
        <sharedTo>
            <group>Beauty_Escalation_Queue</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Beauty_Merchandiser</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Merchandiser</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>Beauty - Merchandiser</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Offer_Management</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Offer_Management</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>Beauty - Offer Management</label>
    </listViews>
    <listViews>
        <fullName>Beauty_Producers</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Digital_Producers</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Beauty</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>Beauty - Producers</label>
    </listViews>
    <listViews>
        <fullName>Day_view</fullName>
        <columns>NAME</columns>
        <columns>Floorset_Plan__c</columns>
        <columns>DGTL_TaskOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Day_View</value>
        </filters>
        <label>Day view</label>
    </listViews>
    <listViews>
        <fullName>PINK_Commerce_Operations</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Commerce_Operations</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>PINK</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>PINK - Commerce Operations</label>
    </listViews>
    <listViews>
        <fullName>PINK_Copy_Writers</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Copy_Writer</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>PINK</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>PINK - Copy Writers</label>
    </listViews>
    <listViews>
        <fullName>PINK_Creative_Design</fullName>
        <columns>NAME</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>Content_Detail_Information__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DGTL_TaskOwner__c</field>
            <operation>equals</operation>
            <value>DGTL_Creative_Design</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>PINK</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Notification</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Inprogress</value>
        </filters>
        <label>PINK - Creative Design</label>
    </listViews>
    <listViews>
        <fullName>PINK_Daily_Updates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Day_View</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>PINK</value>
        </filters>
        <label>PINK Daily Updates</label>
    </listViews>
    <listViews>
        <fullName>PINK_Escalation_Group</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Changed_Content_Fields__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DGTL_Task__c.Escalation</value>
        </filters>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>PINK</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Rejected</value>
        </filters>
        <label>PINK - Escalation Group</label>
        <sharedTo>
            <group>PINK_Escalation_Queue</group>
        </sharedTo>
    </listViews>
</CustomObject>